--- a/assets/sass/sections/_creator-page.scss
+++ b/assets/sass/sections/_creator-page.scss
@@ -15,7 +15,7 @@
     height: 1000px
   }
   @media only screen and (max-width: $bp-xsmall) {
-    height: 800px
+    height: 900px
   }
 
   
