--- a/assets/sass/sections/_navbar.scss
+++ b/assets/sass/sections/_navbar.scss
@@ -176,7 +176,7 @@
             border: 1px solid #fff;
             border-radius: 4px 0 0 4px;
             background: none;
-            margin-top: .6rem;
+            margin-top: .7rem;
           }
 
           input:focus {
